--- a/app/views/home/tech.html.haml
+++ b/app/views/home/tech.html.haml
@@ -1,2 +1,8 @@
 %h1 Home#tech
 %p Find me in app/views/home/tech.html.haml
+
+https://delve.a9.io/
+render.com
+https://unify.ai/chat?default=true
+https://gpt.h2o.ai
+https://www.assembled.com/blog/better-rag-results-with-reciprocal-rank-fusion-and-hybrid-search
