--- a/app/views/home/tech.html.haml
+++ b/app/views/home/tech.html.haml
@@ -1,8 +1,30 @@
-%h1 Home#tech
-%p Find me in app/views/home/tech.html.haml
+%h1 Technology
+%p This page leads us to some interesting technology.
 
-https://delve.a9.io/
-render.com
-https://unify.ai/chat?default=true
-https://gpt.h2o.ai
-https://www.assembled.com/blog/better-rag-results-with-reciprocal-rank-fusion-and-hybrid-search
+%ul
+  %li
+    A free chatbot:
+    %br/
+    %a(href='https://delve.a9.io/') https://delve.a9.io/
+  %li
+    A free chatbot:
+    %br/
+    %a(href='https://unify.ai/chat?default=true' target='x') https://unify.ai/chat?default=true
+  %li
+    A free chatbot:
+    %br/
+    %a(href='https://gpt.h2o.ai' target='x') https://gpt.h2o.ai
+  %li
+    A description of "hybrid" search:
+    %br/
+    %a(href='https://www.assembled.com/blog/better-rag-results-with-reciprocal-rank-fusion-and-hybrid-search' target='x')
+      https://www.assembled.com/blog/better-rag-results-with-reciprocal-rank-fusion-and-hybrid-search
+  %li
+    A hosting service with a free-tier:
+    %br/
+    %a(href='render.com' target='x') render.com
+  %li
+    Ask HN: I have many PDFs – what is the best local way to leverage AI for search?
+    %br/
+    %a(href='https://news.ycombinator.com/item?id=40528192' target='x')
+      https://news.ycombinator.com/item?id=40528192
