--- a/app/views/home/doctype.html.haml
+++ b/app/views/home/doctype.html.haml
@@ -1,2 +1,7 @@
-%h1 Home#doctype
-%p Find me in app/views/home/doctype.html.haml
+%h1 Document Types
+%p Tentative Rulings
+%p LA County
+-iframe_s = 'https://jffjorg.github.io/lacourt/htmls/2024_06_30_SE__C.html'
+
+
+%iframe#iframe2(src=iframe_s title=iframe_s loading='lazy' height='300px' width='100%')
