--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <script>
       $(function() {
       $("#iframe2").resizable({
-      alsoResize: "#iframe2 iframe",
+      alsoResize: "#iframe2",
       handles: "se"
       });
       });
