--- a/app/views/home/doctype.html.haml
+++ b/app/views/home/doctype.html.haml
@@ -2,5 +2,7 @@
 %p Tentative Rulings
 %p LA County
 -iframe_s = 'https://jffjorg.github.io/lacourt/htmls/2024_06_30_SE__C.html'
-
 %iframe#iframe2(src=iframe_s title=iframe_s loading='lazy' height='300px' width='100%')
+%a(href=iframe_s target='popout') PopOut
+%hr/
+
