--- a/app/views/counties/listem.html.haml
+++ b/app/views/counties/listem.html.haml
@@ -1,2 +1,27 @@
-%h1 Jnk#listem
-%p Find me in app/views/jnk/listem.html.haml
+%h1 Counties
+%p The largest county is Los Angeles
+%ul
+  %li
+    %a(href='/counties/contra_costa')contra_costa
+  %li
+    %a(href='/counties/fresno')fresno
+  %li
+    %a(href='/counties/los_angeles')los_angeles
+  %li
+    %a(href='/counties/orange_county')orange_county
+  %li
+    %a(href='/counties/riverside')riverside
+  %li
+    %a(href='/counties/sacramento')sacramento
+  %li
+    %a(href='/counties/san_bernadino')san_bernadino
+  %li
+    %a(href='/counties/san_luis_obispo')san_luis_obispo
+  %li
+    %a(href='/counties/san_mateo')san_mateo
+  %li
+    %a(href='/counties/santa_clara')santa_clara
+  %li
+    %a(href='/counties/santa_cruz')santa_cruz
+  %li
+    %a(href='/counties/sonoma')sonoma           
