--- a/app/views/counties/los_angeles.html.haml
+++ b/app/views/counties/los_angeles.html.haml
@@ -1,2 +1,8 @@
-%h1 Counties#los_angeles
-%p Find me in app/views/counties/los_angeles.html.haml
+%h1 Los Angeles
+%p Data Starts at 2023-09-18
+
+%ul
+  %li
+    %a(href='/counties/los_angeles_m/2023_09')2023_09
+  %li
+    %a(href='/counties/los_angeles_m/2023_10')2023_10
