--- a/app/views/layouts/_links_top.html.haml
+++ b/app/views/layouts/_links_top.html.haml
@@ -3,6 +3,7 @@
 %a(href='/contact') Contact
 %a(href='/doctype') Legal Examples
 %a(href='/tech') Tech
+%a(href='/counties/listem') Counties
 %br/
 
   
