--- a/app/views/counties/los_angeles_m.haml
+++ b/app/views/counties/los_angeles_m.haml
@@ -4,7 +4,7 @@
 %ul
   %li
     -html_s = '2024_06_03_BH__207.html'
-    %a(href='https://jffjorg.github.io/lacourt/htmls/2024_06_03_BH__207.html') 2024_06_03_BH__207.html
+    %a(target='t10' href='https://jffjorg.github.io/lacourt/htmls/2024_06_03_BH__207.html') 2024_06_03_BH__207.html
 
   %li
     -html_s = '2024_06_30_SE__C.html'
