--- a/app/views/counties/los_angeles_m.haml
+++ b/app/views/counties/los_angeles_m.haml
@@ -1,11 +1,11 @@
 %h1 los_angeles_m.haml
-=params['mmonth']
+=params["mmonth"]
 
 %ul
   %li
-    -html_s = '2024_06_03_BH__207.html'
-    %a(target='t10' href='https://jffjorg.github.io/lacourt/htmls/2024_06_03_BH__207.html') 2024_06_03_BH__207.html
+    -html_s = "2024_06_03_BH__207.html"
+    %a(target="t10" href="/counties/los_angeles_tr/#{html_s}") #{html_s}
 
   %li
-    -html_s = '2024_06_30_SE__C.html'
-    %a(href='https://jffjorg.github.io/lacourt/htmls/2024_06_30_SE__C.html') 2024_06_30_SE__C.html
+    -html_s = "2024_06_30_SE__C.html"
+    %a(href="https://jffjorg.github.io/lacourt/htmls/2024_06_30_SE__C.html") 2024_06_30_SE__C.html
