--- a/app/views/counties/los_angeles_tr.haml
+++ b/app/views/counties/los_angeles_tr.haml
@@ -2,6 +2,7 @@
 %p Some Tentative Rulings from a Department on a Specific Day
 =params['trfile']
 
--html_s = 'https://jffjorg.github.io/lacourt/htmls/2024_06_03_BH__207.html'
+-trfile = '2024_06_03_BH__207.html'
+-html_s = "https://jffjorg.github.io/lacourt/htmls/#{params['trfile']}"
 %iframe(src=html_s)
 
