--- a/app/views/counties/los_angeles.html.haml
+++ b/app/views/counties/los_angeles.html.haml
@@ -2,11 +2,10 @@
 %a(href='/counties/listem') Counties ->
 Los Angeles
 
-%p Data Starts at 2023-09-18
-
+%p Los Angeles Data Starts at 2023-09-18
 
 %ul
-  %li
-    %a(href='/counties/los_angeles_m/2023_09')2023_09
-  %li
-    %a(href='/counties/los_angeles_m/2023_10')2023_10
+  - @mmonth_s_st.each do |mmonth_s|
+    %li
+      %a(target="t12" href="/counties/los_angeles_m/#{mmonth_s}") Los Angeles #{mmonth_s}
+
