--- a/app/views/counties/listem.html.haml
+++ b/app/views/counties/listem.html.haml
@@ -6,7 +6,7 @@
   %li
     %a(href='/counties/fresno')fresno
   %li
-    %a(href='/counties/los_angeles')los_angeles
+    %a(href='/counties/los_angeles')Los Angeles
   %li
     %a(href='/counties/orange_county')orange_county
   %li
