--- a/app/views/home/tech.html.haml
+++ b/app/views/home/tech.html.haml
@@ -22,7 +22,7 @@
   %li
     A hosting service with a free-tier:
     %br/
-    %a(href='render.com' target='x') render.com
+    %a(href='https://render.com' target='x') https://render.com
   %li
     Ask HN: I have many PDFs – what is the best local way to leverage AI for search?
     %br/
