--- a/app/views/counties/los_angeles.html.haml
+++ b/app/views/counties/los_angeles.html.haml
@@ -5,7 +5,7 @@ Los Angeles
 %p Los Angeles Data Starts at 2023-09-18
 
 %ul
-  - @mmonth_s_st.each do |mmonth_s|
+  - @mmonth_s_a.each do |mmonth_s|
     %li
       %a(target="t12" href="/counties/los_angeles_m/#{mmonth_s}") Los Angeles #{mmonth_s}
 
