--- a/app/views/counties/los_angeles_tr.haml
+++ b/app/views/counties/los_angeles_tr.haml
@@ -13,5 +13,6 @@ Los Angeles #{params["trfile"]}
 %ul
   %li
     %a(target="txt" href=txt_s) Text
+=@txt_f_s_a
 %iframe(src=html_s width="100%" height="900px")
 
