--- a/app/views/counties/los_angeles_tr.haml
+++ b/app/views/counties/los_angeles_tr.haml
@@ -8,11 +8,12 @@ Los Angeles #{params["trfile"]}
 %p Some Tentative Rulings from a Department for a Specific Day of Court Hearings
 
 -html_s = "https://jffjorg.github.io/lacourt/htmls/#{params["trfile"]}"
--txt_s = "https://jffjorg.github.io/lacourt/text/#{params["trfile"]}/tent_ruling_01.txt"
 %a(target="po" href=html_s) PopOut: #{params["trfile"]}
+
 %ul
-  %li
-    %a(target="txt" href=txt_s) Text
-=@txt_f_s_a
+  -@txt_f_s_a[..-2].each do |txt_f_s|
+    %li
+      %a(target='t13' href="https://jffjorg.github.io/lacourt/text/#{params['trfile']}/#{txt_f_s[-19..]}") #{txt_f_s[-19..]}
+
 %iframe(src=html_s width="100%" height="900px")
 
