--- a/app/views/layouts/_links_bottom.html.haml
+++ b/app/views/layouts/_links_bottom.html.haml
@@ -3,7 +3,7 @@
 %a(href='/about')   About
 %a(href='/blog')    Blog
 %a(href='/contact') Contact
-%a(href='/doctype') Legal Examples
+/ %a(href='/doctype') Legal Examples
 %a(href='/tech') Tech
 %a(href='/counties/listem') Counties
 %br/
