--- a/app/views/counties/los_angeles_tr.haml
+++ b/app/views/counties/los_angeles_tr.haml
@@ -38,5 +38,5 @@ Los Angeles #{params["trfile"]}
 %p Also, 
 %a(target="po" href=html_s) #{params["trfile"]}.html
 is displayed to you from an iframe:
-%iframe(src=html_s width="100%" height="900px")
+%iframe(src=html_s width="100%" height="500")
 
