--- a/public/all.css
+++ b/public/all.css
@@ -19,7 +19,6 @@ a:hover{ color: #BB0000; }
 
 a{ color: #0000AA; }
 
-.iframe1 {
-  resize: both;
-  overflow: hidden;
-}
+.iframe1 {resize: both; overflow: hidden; }
+
+#iframe1 {border: 1px solid black;}
