--- a/app/views/counties/los_angeles_tr_if.haml
+++ b/app/views/counties/los_angeles_tr_if.haml
@@ -1,7 +1,7 @@
 %h1 Tentative Ruling
 - demo_tr_url_s = 'https://jffjorg.github.io/lacourt/text/2024_06_03_LAM_32/tent_ruling_03.txt'
 - prefix_s = "https://jffjorg.github.io/lacourt/text/"
-- suffix2_s = "#{params['suffix_s'].sub('_tent','/tent')}.txt"
+- suffix2_s = "#{params['suffix_t_s'].sub('_tent','/tent')}.txt"
 - tr_url = "#{prefix_s}#{suffix2_s}"
 %p Tentative Ruling URL:
 %p
