--- a/app/views/counties/los_angeles_summ_if.haml
+++ b/app/views/counties/los_angeles_summ_if.haml
@@ -1,7 +1,7 @@
 %h1 Summary
 - demo_summ_url_s = 'https://jffjorg.github.io/lacourt/text/2024_06_03_LAM_32/summary_03.txt'
 - prefix_s = "https://jffjorg.github.io/lacourt/text/"
-- suffix2_s = "#{params['suffix_s'].sub('_summ','/summ')}.txt"
+- suffix2_s = "#{params['suffix_s_s'].sub('_summ','/summ')}.txt"
 - summ_url = "#{prefix_s}#{suffix2_s}"
 %p Summary URL:
 %p
