--- a/app/views/counties/los_angeles_tr.haml
+++ b/app/views/counties/los_angeles_tr.haml
@@ -13,7 +13,8 @@ Los Angeles #{params["trfile"]}
 
 %p The above HTML file should contain 0 or more Tentative Rulings which should be human readable. You will probably need to use text-search in your browser to find the "Case Number" which interests you.
 
-%p Some Plain Text [via Python "BeautifulSoup"] From Some of Those Rulings Might Be Linked Below:
+%p Some Plain Text [via Python "BeautifulSoup"] From Some of Those Rulings Might Be Linked Below. The tent_ruling text shows you text sent to the LLM software; it's not intended for humans.
+%p The summary text shows you a summary created by the LLM software; it is intended for humans:
 
 %table
   -ght_s = 'https://jffjorg.github.io/lacourt/text/'
