--- a/app/views/counties/los_angeles_tr_if.haml
+++ b/app/views/counties/los_angeles_tr_if.haml
@@ -6,6 +6,19 @@
 %p Tentative Ruling URL:
 %p
   %a(href=tr_url target='t21') #{tr_url}
+%p The text here is not very human readable.
+%p The human readable text is here:
+
+-html_f_s = params['suffix_t_s'][..-16]
+Los Angeles
+%a(target="t10" href="/counties/los_angeles_tr/#{html_f_s}") #{html_f_s}
+%br/
+or
+%br/
+-gh_html_s = "https://jffjorg.github.io/lacourt/htmls/#{html_f_s}"
+%a(target="t11" href=gh_html_s) #{html_f_s}.html
+
+%p The text here is intended for LLM software which will transform the text into a human readable summary.
 %p Tentative Ruling Text [In an iframe-element]:
 %iframe#iframe1(src="#{tr_url}" width="100%" height="333")
 
