--- a/app/views/counties/listem.html.haml
+++ b/app/views/counties/listem.html.haml
@@ -1,5 +1,7 @@
 %h1 Counties
-%p The largest county is Los Angeles
+%p The largest county is Los Angeles.
+%p Santa Clara county is interesting.
+
 %ul
   %li
     %a(href='/counties/contra_costa')contra_costa
@@ -20,7 +22,7 @@
   %li
     %a(href='/counties/san_mateo')san_mateo
   %li
-    %a(href='/counties/santa_clara')santa_clara
+    %a(href='/counties/santa_clara')Santa Clara
   %li
     %a(href='/counties/santa_cruz')santa_cruz
   %li
