--- a/app/views/counties/sacramento.html.haml
+++ b/app/views/counties/sacramento.html.haml
@@ -1,2 +1,9 @@
 %h1 Counties#sacramento
 %p Find me in app/views/counties/sacramento.html.haml
+
+%p
+  %a(href='/R2cases1.txt' target='R2cases1') R2cases1.txt
+  
+%p
+  %a(href='/R2pdfs1.txt' target='R2pdfs1') R2pdfs1.txt
+  
