--- a/app/views/counties/sacramento.html.haml
+++ b/app/views/counties/sacramento.html.haml
@@ -1,9 +1,9 @@
-%h1 Counties#sacramento
-%p Find me in app/views/counties/sacramento.html.haml
+%h1 Sacramento County
+%a(href='/counties/listem') Counties ->
+Sacramento
+%p
+  Here is a list of some filings from some court cases:
+  %a(href='/R2hrefs_hr1.html' target='x') R2hrefs_hr1.html
+%p
 
-%p
-  %a(href='/R2cases1.txt' target='R2cases1') R2cases1.txt
-  
-%p
-  %a(href='/R2pdfs1.txt' target='R2pdfs1') R2pdfs1.txt
-  
+
