--- a/app/views/counties/listem.html.haml
+++ b/app/views/counties/listem.html.haml
@@ -14,7 +14,7 @@
   %li
     %a(href='/counties/riverside')riverside
   %li
-    %a(href='/counties/sacramento')sacramento
+    %a(href='/counties/sacramento')Sacramento
   %li
     %a(href='/counties/san_bernadino')san_bernadino
   %li
