--- a/app/views/counties/sacramento.html.haml
+++ b/app/views/counties/sacramento.html.haml
@@ -2,8 +2,9 @@
 %a(href='/counties/listem') Counties ->
 Sacramento
 %p
-  Here is a list of some filings from some court cases:
+  Here is a list of many filings from Sacramento court cases:
   %a(href='/R2hrefs_hr1.html' target='x') R2hrefs_hr1.html
 %p
+  =render 'many_sacramento_pdfs'
 
 
